Fixed splash background CSS / What's New badge, Facebook Like box alignment

--- a/css/mixxx1.css
+++ b/css/mixxx1.css
@@ -101,7 +101,7 @@ h2 a {
     text-align: center;
 }
 
-#splash img {
+#splash img.background {
     width: 920px;
     height: 380px;
 }
